--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,4 +40,29 @@ header nav ul li a {
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+footer {
+    background: #fce138;
+    width: 100%;
+    padding: 40px 35px;
+
+}
+
+footer h2 {
+    display: inline;
+    color: #024e76;
+    font-size: 30px;
+    margin: 0;
+}
+
+footer div {
+    float: right;
+    line-height: 1.5;
+    text-align: right;
+}
+
+footer a {
+    color: #024e76;
 }
