resized what we do content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,21 +123,12 @@ section {
     padding: 10px 20px;
     font-size: 16px;
 }
+/* Hero style end */
 
 .intro {
     text-align: center;
 }
 
-.intro h2 {
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    border-color: #fce138;
-    display: inline-block;
-
-}
 
 .intro p {
     line-height: 1.7;
@@ -146,4 +137,50 @@ section {
     font-size: 20px;
     margin: 0 auto;
 }
-/* Hero style end */
+
+.steps {
+    text-align: center;
+    background: #fce138;
+}
+
+.steps div {
+    margin-bottom: 80px;
+}
+
+.steps img {
+    width: 15%;
+    margin: 10px 0;
+}
+
+.steps h3 {
+    color: #024e76;
+    font-size: 46px;
+    margin-top: 10px;
+}
+
+.steps p {
+    color: #39a6b2;
+    font-size: 23px;
+    }
+
+    .steps span {
+        font-size: 38px
+    }
+
+.section-title {
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    display: inline-block;
+    border-bottom: 3px solid;
+}
+
+.primary-border {
+    border-color: #fce138;
+}
+
+.secondary-border {
+    border-color: #39a6b2;
+}
+
