--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,14 @@ section {
     padding: 60px;
 }
 
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
 /* Hero style start*/
 .hero {
     background-image: url(../images/hero-bg.jpeg);
@@ -123,6 +131,7 @@ section {
     padding: 10px 20px;
     font-size: 16px;
 }
+
 /* Hero style end */
 
 .intro {
@@ -161,11 +170,11 @@ section {
 .steps p {
     color: #39a6b2;
     font-size: 23px;
-    }
+}
 
-    .steps span {
-        font-size: 38px
-    }
+.steps span {
+    font-size: 38px
+}
 
 .section-title {
     font-size: 55px;
@@ -184,3 +193,41 @@ section {
     border-color: #39a6b2;
 }
 
+.trainers {
+    text-align: center;
+}
+
+.trainer {
+    width: 900px;
+    margin: 0 auto 30px auto;
+    background: #024e76;
+    color: #fce138;
+    overflow: auto;
+}
+
+.trainer img {
+    width: 35%;
+    float: left;
+}
+
+.trainer-bio {
+    padding: 35px;
+    float: left;
+    width: 65%;
+}
+
+.trainer-bio h3 {
+    font-size: 32px;
+    margin-bottom: 8px;
+}
+
+.trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 26px;
+    margin-bottom: 25px;
+}
+
+.trainer-bio p {
+    font-size: 17px;
+    line-height: 1.3;
+}
