--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,3 +231,22 @@ section {
     font-size: 17px;
     line-height: 1.3;
 }
+
+/* Reach out styles start */
+.contact {
+    text-align: center;
+    background: #024e76;
+}
+
+.contact h2 {
+    color: #fce138;
+}
+
+.contact-info div {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+}
