--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,7 +257,8 @@ section {
 
 }
 
-.contact-info p, .contact-info address {
+.contact-info p,
+.contact-info address {
     margin: 20px 0;
     line-height: 1.5;
     font-size: 20px;
