added flex row to div and p

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,21 +155,9 @@ section {
 
 /* Hero style end */
 
-.intro {
-    text-align: center;
-}
 
-
-.intro p {
-    line-height: 1.7;
-    color: #39a6b2;
-    width: 80%;
-    font-size: 20px;
-    margin: 0 auto;
-}
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
@@ -200,10 +188,11 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -214,9 +203,7 @@ section {
     border-color: #39a6b2;
 }
 
-.trainers {
-    text-align: center;
-}
+.trainers {}
 
 .trainer {
     width: 900px;
@@ -255,7 +242,6 @@ section {
 
 /* Reach out styles start */
 .contact {
-    text-align: center;
     background: #024e76;
 }
 
@@ -278,6 +264,15 @@ section {
 
 }
 
+.intro p {
+    line-height: 1.7;
+    color: #39a6b2;
+    width: 80%;
+    font-size: 20px;
+    margin: 0 auto;
+    text-align: center;
+}
+
 .contact-info p,
 .contact-info address {
     margin: 20px 0;
@@ -288,4 +283,8 @@ section {
 
 .contact-info a {
     color: #fce138;
+}
+
+.flex-row {
+    display: flex;
 }
