added flexbox to contact info

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,16 +267,16 @@ section {
     background: #024e76;
 }
 
+.contact-info>* {
+    flex: 1;
+    margin: 15px;
+}
+
 .contact h2 {
     color: #fce138;
 }
 
 .contact-info div {
-    width: 410px;
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
-    margin: 30px 0 0 60px;
     color: white;
 }
 
@@ -284,6 +284,10 @@ section {
     color: #fce138;
     font-size: 32px;
 
+}
+
+.contact-info iframe {
+    height: 400px;
 }
 
 .intro p {
@@ -299,7 +303,7 @@ section {
 .contact-info address {
     margin: 20px 0;
     line-height: 1.5;
-    font-size: 20px;
+    font-size: 16px;
     font-style: normal;
 }
 
@@ -307,6 +311,32 @@ section {
     color: #fce138;
 }
 
+.contact-info {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact-form input, .contact-form textarea {
+    border: 1 px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top: 5px;
+}
+
+.content-form button {
+    width: 100%;
+    border: none;
+    background: #fce138;
+    color: #024e76;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 16px;
+}
 .flex-row {
     display: flex;
 }
