--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,476 +1,470 @@
-body {
-    color: #39a6b2;
-    font-family: Helvetica, Arial, sans-serif;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-/* apply styles to <header> */
+body {
+  color: #39a6b2;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+
+/* HEADER / NAV BAR STYLES START */
+
 header {
-    padding: 20px 35px;
-    background-color: #39a6b2;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+  padding: 20px 35px;
+  background-color: #39a6b2;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 header h1 {
-    font-weight: bold;
-    font-size: 36px;
-    color: #fce138;
-    margin: 0;
+  font-weight: bold;
+  margin: 0;
+  font-size: 36px;
+  color: #fce138;
 }
 
 header a {
-    text-decoration: none;
-    color: #fce138;
+  text-decoration: none;
+  color: #fce138;
 }
 
 header nav {
-    margin: 7px 0;
+  margin: 7px 0;
 }
 
 header nav ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
 }
 
 header nav ul li a {
-    font-weight: lighter;
-    font-size: 1.55vw;
-    padding: 10px 15px;
+  padding: 10px 15px;
+  font-weight: lighter;
+  font-size: 1.55vw;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+/* HEADER / NAVBAR STYLES END */
 
+
+
+/* FOOTER STYLES START */
 footer {
-    background: #fce138;
-    width: 100%;
-    padding: 40px 35px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-
-
+  background: #fce138;
+  padding: 40px 35px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 footer h2 {
-    color: #024e76;
-    font-size: 30px;
-    margin: 0;
+  color: #024e76;
+  font-size: 30px;
+  margin: 0;
 }
 
 footer div {
-    line-height: 1.5;
-    text-align: right;
+  line-height: 1.5;
+  text-align: right;
 }
 
 footer a {
-    color: #024e76;
+  color: #024e76;
 }
+/* END FOOTER STYLES */
 
+/* STYLE ALL SECTION TAGS */
 section {
-    padding: 60px;
+  padding: 60px;
 }
 
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
-}
-
-/* Hero style start*/
+/* HERO STYLES START */
 .hero {
-    background-image: url(../images/hero-bg.jpeg);
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: flex-start;
+  background-image: url('../images/hero-bg.jpg');
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: flex-start;
 }
 
 .hero-cta {
-    width: 35%;
-    text-align: right;
-    margin: 3.5%;
-    color: #fff;
-    font-size: 18px;
-    line-height: 1.2;
+  width: 35%;
+  text-align: right;
+  margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.2;
 }
 
 .hero-cta h2 {
-    font-style: italic;
-    font-size: 55px;
-    color: #fce138;
+  font-style: italic;
+  font-size: 55px;
+  color: #fce138;
 }
 
 .hero-form {
-    color: #024e76;
-    background-color: #fce138;
-    padding: 20px;
-    border-style: solid;
-    border-width: 3px;
-    border-color: #024e76;
-    width: 40%;
-    margin: 3.5%;
+  border: 3px solid #024e76;
+  background-color: #fce138;
+  padding: 20px;
+  color: #024e76;
+  width: 40%;
+  margin: 3.5%;
 }
 
 .hero-form h3 {
-    font-size: 24px;
-    margin: 0;
+  font-size: 24px;
+  margin: 0;
 }
-
 .hero-form p {
-    margin: 5px 0 15px 0;
+  margin: 5px 0 15px 0;
 }
 
 .form-input {
-    border: 1px solid #024e76;
-    display: block;
-    padding: 7px 15px;
-    font-size: 16px;
-    color: #024e76;
-    width: 100%;
-    margin-bottom: 15px;
+  border: 1px solid #024e76;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px; 
 }
 
 .hero-form label {
-    margin: 5px;
+  margin: 0 5px;
 }
 
 .hero-form button {
-    color: yellow;
-    background-color: navy;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-}
-
-/* Hero style end */
-
-.steps {
-    background: #fce138;
-}
-
-.step {
-    margin: 50px auto;
-    padding-bottom: 50px;
-    width: 80%;
-    border-bottom: 1px solid #39a6b2;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.step h3 {
-    color: #024e76;
-    font-size: 46px;
-    flex: 1 30%;
-}
-
-.step-info {
-    flex: 2 70%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-}
+  color: #fce138;
+  background-color: #024e76;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+} 
+/* HERO STYLES END */
 
 
-.step-img {
-    flex: 1 12%;
-    margin-right: 20px;
-}
-
-.step-img img {
-    max-width: 100%;
-}
-
-.step-text {
-    flex: 12;
-}
-
-.step-text p {
-    color: #39a6b2;
-    font-size: 18px;
-}
-
-.step-text h4 {
-    font-size: 26px;
-    line-height: 1.5;
-    color: #024e76;
-}
-
-
-
-
+/* SECTION TITLE STYLES START */
 .section-title {
-    font-size: 48px;
-    color: #024e76;
-    border-bottom: 3px solid;
-    padding-bottom: 20px;
-    text-align: center;
-    margin: 0 auto 35px auto;
-    width: 50%;
+  font-size: 48px;
+  border-bottom: 3px solid;
+  color: #024e76;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
 }
 
 .primary-border {
-    border-color: #fce138;
+  border-color: #fce138;
 }
 
 .secondary-border {
-    border-color: #39a6b2;
+  border-color: #39a6b2;
+}
+/* SECTION TITLE STYLES END */
+
+/* WHAT WE DO STYLES */
+
+.intro p {
+  line-height: 1.7;
+  color: #39a6b2;
+  width: 80%;
+  margin: 0 auto;
+  font-size: 20px;
+  text-align: center;
+}
+/* WHAT YOU DO STYLES END */
+
+
+/* WHAT YOU DO STYLES START */
+.steps { 
+  background: #fce138;
 }
 
+.step {
+  margin: 50px auto;
+  padding-bottom: 50px;
+  width: 80%;
+  border-bottom: 1px solid #39a6b2;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.step h3 {
+  color: #024e76;
+  font-size: 46px;
+  flex: 1 30%;
+}
+
+.step-info {
+  flex: 2 70%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.step-img {
+  flex: 1 12%;
+  margin-right: 20px;
+}
+
+.step-img img {
+  max-width: 100%;
+}
+
+.step-text {
+  flex: 12;
+}
+
+.step-text p {
+  color: #39a6b2;
+  font-size: 18px;
+}
+
+.step-text h4 {
+  font-size: 26px;
+  line-height: 1.5;
+  color: #024e76;
+}
+
+/* WHAT YOU DO STYLES END */
+
+/* MEET THE TRAINERS START */
 .trainers {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .trainer {
-    margin: 20px;
-    background: #024e76;
-    color: #fce138;
-    flex: 1;
+  margin: 20px;
+  flex: 1;
+  background: #024e76;
+  color: #fce138;
 }
 
 .trainer img {
-    width: 100%;
+  width: 100%;
 }
 
 .trainer-bio {
-    padding: 25px;
-    line-height: 1.3;
-
+  padding: 25px;
+  line-height: 1.3;
 }
 
 .trainer-bio h3 {
-    font-size: 28px;
+  font-size: 28px;
 }
 
 .trainer-bio h4 {
-    font-weight: lighter;
-    font-size: 22px;
-    margin-bottom: 15px;
+  font-weight: lighter;
+  font-size: 22px;
+  margin-bottom: 15px;
 }
 
 .trainer-bio p {
-    font-size: 17px;
+  font-size: 17px;
 }
+/* TRAINER STYLES END */
 
-/* Reach out styles start */
+/* REACH OUT STYLES START */
 .contact {
-    background: #024e76;
-}
-
-.contact-info>* {
-    flex: 1;
-    margin: 15px;
+  background: #024e76;
 }
 
 .contact h2 {
-    color: #fce138;
-}
-
-.contact-info div {
-    color: white;
-}
-
-.contact-info h3 {
-    color: #fce138;
-    font-size: 32px;
-
-}
-
-.contact-info iframe {
-    height: 400px;
-}
-
-.intro p {
-    line-height: 1.7;
-    color: #39a6b2;
-    width: 80%;
-    font-size: 20px;
-    margin: 0 auto;
-    text-align: center;
-}
-
-.contact-info p,
-.contact-info address {
-    margin: 20px 0;
-    line-height: 1.5;
-    font-size: 16px;
-    font-style: normal;
-}
-
-.contact-info a {
-    color: #fce138;
+  color: #fce138;
 }
 
 .contact-info {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.contact-form input,
-.contact-form textarea {
-    border: 1 px solid #024e76;
-    display: block;
-    padding: 7px 15px;
-    font-size: 16px;
-    color: #024e76;
-    width: 100%;
-    margin-bottom: 15px;
-    margin-top: 5px;
+.contact-info > * {
+  flex: 1;
+  margin: 15px;
 }
 
-.content-form button {
-    width: 100%;
-    border: none;
-    background: #fce138;
-    color: #024e76;
-    text-align: center;
-    padding: 15px 0;
-    font-size: 16px;
+.contact-info iframe {
+  height: 400px;
 }
 
-.
+.contact-info div {
+  color: white;
+}
+
+.contact-info h3 {
+  color: #fce138;
+  font-size: 32px;
+}
+
+.contact-info p, .contact-info address {
+  margin: 20px 0;
+  line-height: 1.5;
+  font-size: 16px;
+  font-style: normal;
+}
+
+.contact-form input, .contact-form textarea {
+  border: 1px solid #024e76;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px;
+  margin-top: 5px;
+}
+
+.contact-form button {
+  width: 100%;
+  border: none;
+  background: #fce138;
+  color: #024e76;
+  text-align: center;
+  padding: 15px 0;
+  font-size: 16px;
+}
+
+.contact-info a {
+  color: #fce138;
+}
+
+
+/* REACH OUT STYLES END */
 
 /* UTILITIES */
 .text-left {
-    text-align: left;
+  text-align: left;
 }
 
 .text-right {
-    text-align: right;
+  text-align: right;
 }
 
 .flex-row {
-    display: flex;
+  display: flex;
 }
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
-    header {
-        padding-bottom: 0;
-        justify-content: center;
-    }
+  header {
+    padding-bottom: 0;
+    justify-content: center;
+  }
 
-    header h1 {
-        width: 100%;
-        text-align: center;
-    }
+  header h1 {
+    width: 100%;
+    text-align: center;
+  }
 
-    header nav ul {
-        margin-top: 20px;
-        width: 100%;
-        justify-content: center;
-    }
+  header nav ul {
+    margin-top: 20px;
+    width: 100%;
+    justify-content: center;
+  }
 
-    header nav ul li a {
-        font-size: 20px;
-    }
+  header nav ul li a {
+    font-size: 20px;
+  }
 
-    footer h2,
-    footer div {
-        text-align: center;
-        width: 100%;
-    }
+  footer h2, footer div {
+    text-align: center;
+    width: 100%;
+  }
 
-    .hero-cta,
-    .hero-form {
-        width: 100%;
-    }
+  .hero-cta, .hero-form {
+    width: 100%;
+  }
+  
+  .hero-cta {
+    text-align: center;
+  }
 
-    .hero-cta {
-        text-align: center;
-    }
-
-    .section-title {
-        width: 80%;
-    }
-
-    .trainer {
-        flex: 0 70%;
-    }
-
-    .contact-info iframe {
-        flex: 1 100%;
-    }
+  .section-title {
+    width: 80%;
+  }
+  
+  .trainer {
+    flex: 0 70%;
+  }
+  
+  .contact-info iframe{
+    flex: 1 100%;
+  }
 }
-
 
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
 @media screen and (max-width: 768px) {
-    section {
-        padding: 30px 15px;
-    }
+  section {
+    padding: 30px 15px;
+  }
 
-    .step h3 {
-        flex: 1 100%;
-        text-align: center;
-    }
+  .step h3 {
+    flex: 1 100%;
+    text-align: center;
+  }
 
-    .step-info {
-        flex: 2 100%;
-        text-align: center;
-        justify-content: center;
-    }
+  .step-info {
+    flex: 2 100%;
+    text-align: center;
+    justify-content: center;
+  }
 
-    .step-img {
-        flex: 0 32%;
-        margin-right: 0;
-        margin-top: 15px;
-        margin-bottom: 15px;
-    }
+  .step-img {
+    flex: 0 32%;
+    margin-right: 0;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
 
-    .step-text {
-        flex: 100%;
-    }
-
+  .step-text {
+    flex: 100%;  
+  }
 }
-
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
 @media screen and (max-width: 575px) {
+  .hero-form button {
+    width: 100%;
+  }
 
-    hero-form button {
-        width: 100%;
-    }
+  .section-title {
+    width: 95%;
+  }
 
-    .section-title {
-        width: 95%;
-    }
+  .intro p {
+    width: 100%;
+  }
 
-    .intro p {
-        width: 100%;
-    }
+  .trainer {
+    flex: 0 100%;
+  }
 
-    .trainer {
-        flex: 0 100%;
-    }
+  .contact-info {
+    text-align: center;
+  }
 
-    .contact-info {
-        text-align: center;
-    }
+  .contact-info > * {
+    flex: 0 100%;
+  }
 
-    .contact-info>* {
-        flex: 0 100%;
-    }
-
-    .contact-form {
-        order: 3;
-    }
+  .contact-form {
+    order: 3;
+  }
 }
